Migrate from gradle to maven